--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </div>
       </div>
       <div id="sidebar" class ="grid-item">
-        <img id="mypic" src="20180823_232508.jpg" alt="AaronMyrie" />
+        <img id="mypic" src="Img/20180823_232508.jpg" alt="AaronMyrie" />
         <div class="flex">
           <h2>Contacts</h2>
           <div class="withicon">
-            <img src="icons8-phone-50 (1).png" alt="Phone" />
+            <img src="Img/icons8-phone-50 (1).png" alt="Phone" />
             <span>(876)477-3250</span>
           </div>
           <div class ="withicon">
-            <img  src="icons8-envelope-48.png" alt="Email" />
+            <img  src="Img/icons8-envelope-48.png" alt="Email" />
             <span>aaron477myrie@gmail.com</span>
           </div>
         </div>
@@ -33,11 +33,11 @@
         <div class="flex">
           <h2>Social Media</h2>
           <div class="withicon">
-            <img id="fbicon" src="facebook.png"/>
+            <img id="fbicon" src="Img/facebook.png"/>
             <span><a href="https://www.facebook.com/aaron.myrie" target="_blank">facebook.com/aaron_myrie</a>
             </div>
             <div class="withicon">
-              <img id="instagram" src="instagram.png"/>
+              <img id="instagram" src="Img/instagram.png"/>
               <span><a href="www.instagram.com" target="_blank">instagram.com/aaron_myrie</a></span>
             </div>
           </div>
