--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="flex-container">
           <div id="box1" class="flex-item">
             <h1>Aaron Myrie</h1>
-            <h1>Software Engineer / Web Developer</h1>
+            <h1>Software Engineer | Web Developer</h1>
           </div>
         </div>
       </div>
