--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Resume</title>
+    <title>Aaron's Resume</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
