--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="biography" class"flex-item">
               <h2 id="bio">Biography</h2>
               <p id="bio"><strong>Aaron Myrie</strong> possesses 3 years of experience in web development, software programming and graphic designing. He is devoted to challenging his skills at any tasks given and is open to learning new things that
-               will ehance his skillset and personal development. He enjoys staying current with the lastest technological advancements. and practises coding during his leisure time.
+               will ehance his skillset and personal development. He enjoys staying current with the lastest technological advancements and practises coding during his leisure time.
              </p>
            </div>
            <hr>
